tests/str_format_empty_placeholder_bad.stderr
tests/str_format_empty_placeholder_bad.hop:6:1: error: HOP2075: consteval error: format string error: malformed placeholder
